# twingraph/src/main/openapi/twingraph.yaml
@@ -17,7 +17,7 @@ tags:
   description: Twin Graph Management
 
 paths:
-  /organizations/{organization_id}/import:
+  /organizations/{organization_id}/twingraph/import:
     parameters:
       - name: organization_id
         in: path
@@ -47,11 +47,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TwinGraphImportInfo'
-  /organizations/{organization_id}/query:
+  /organizations/{organization_id}/twingraph/{graph_id}/query:
     parameters:
       - name: organization_id
         in: path
         description: the Organization identifier
+        required: true
+        schema:
+          type: string
+      - name: graph_id
+        in: path
+        description: the Graph Identifier
         required: true
         schema:
           type: string
@@ -77,7 +83,7 @@ paths:
             application/json:
               schema:
                 type: string
-  /organizations/{organization_id}/{graph_id}:
+  /organizations/{organization_id}/twingraph/{graph_id}:
     parameters:
       - name: organization_id
         in: path
@@ -116,9 +122,6 @@ components:
       type: object
       description: a twin graph query in cypher language
       properties:
-        graphId:
-          type: string
-          description: Twin graph name
         version:
           type: string
           description: Twin graph version
